商品登录layout调整

--- a/kankan/css/kankan_home.css
+++ b/kankan/css/kankan_home.css
@@ -263,7 +263,7 @@
 	color: red;font-size: 12px;margin-right: 2em;
 }
 .ka_sortname{
-	color: #666666;font-size: 14px;margin-right: 2em;
+	font-size: 14px;margin-right: 2em;
 }
 .ka_exchangered{
 	width: 80px; height: 30px; border: 1px #DD524D solid; background-color:#DD524D ; border-radius: 2px;color: #ffffff; padding: 0.3em 0em;font-size: 14px;text-align:center;
