商品登录页面文言替换和图片压缩，商品评论页面用户发表用户头像和昵称的实装

--- a/kankan/css/kankan_home.css
+++ b/kankan/css/kankan_home.css
@@ -293,6 +293,7 @@
 
 .ka_mainbox {
 	margin-top: -1em;
+	margin-bottom: 3em;
 }
 
 .ka_userbox {
@@ -594,7 +595,12 @@
 	font-size: 14px;
 	color: #555555;
 }
-
+#price{
+	border: 1px #FFFFFF solid;width: 7.1em;margin-top: -1em;
+}
+.comd_login_unit{
+	color: #2187E7;
+}
 
 /*----user page----*/
 
