--- a/kankan/css/kankan_home.css
+++ b/kankan/css/kankan_home.css
@@ -398,7 +398,7 @@
 	color: #333333;
 }
 
-#productname {
+#comm_name {
 	border: #ffffff;
 	font-size: 14px;
 	color: #333333;
@@ -444,6 +444,7 @@
 	border: 1px #DD524D solid;
 	background-color: #DD524D;
 	border-radius: 2px;
+	margin-left: 1em;
 	color: #ffffff;
 	padding: 0.3em 0em;
 	font-size: 14px;
