用户页面和设定页面layout整理，出品者评论式样调整

--- a/kankan/css/kankan_home.css
+++ b/kankan/css/kankan_home.css
@@ -791,7 +791,7 @@
 .spinner > div {
   width: 30px;
   height: 30px;
-  background-color: #67CF22;
+  background-color: #1E90FF;
  
   border-radius: 100%;
   display: inline-block;
