--- a/kankan/css/wu.css
+++ b/kankan/css/wu.css
@@ -718,6 +718,7 @@
 	height:100%; 
 	background-color:gray; 
 	text-align:center; 
+	padding-top:10%; 
 	vertical-align:middle;
 	border:1px #FFFFFF solid;
 }
