设定页面相关页面实装和layout改修

--- a/kankan/css/kankan_home.css
+++ b/kankan/css/kankan_home.css
@@ -433,7 +433,9 @@ body .mui-table-view-cell.mui-active{
 	margin-bottom: 3em;
 	background-color: #FFFFFF;
 }
-
+.ka_prologbox1 {
+	background-color: #FFFFFF;
+}
 .ka_proloh5 {
 	color: #000000;
 }
