--- a/kankan/css/wu.css
+++ b/kankan/css/wu.css
@@ -214,7 +214,7 @@
 	background-color:#FFFFFF;
 }
 .tran-chat-face {
-	margin-top:5%;
+	/*margin-top:5%;*/
 	padding-left:14px;
 	margin-right:-4px;
 	width:15%; 
