--- a/kankan/css/wu.css
+++ b/kankan/css/wu.css
@@ -33,10 +33,10 @@
 	height:22px; 
 	width:90px; 
 	margin:0 auto; 
-	margin-bottom:1.5em; 
+	/*margin-bottom:1.5em; */
 	background-color:#FDCA2E; 
 	text-align:center;
-	margin-left:20%;
+	/*margin-left:20%;*/
 }
 .tran-name-buy {
 	width:33%;
