页面bug改修：商品发布，小屏手机确认按扭式样错乱，用户评论页面等其他 页面问题改修

--- a/kankan/css/kankan_home.css
+++ b/kankan/css/kankan_home.css
@@ -457,12 +457,12 @@ body .mui-table-view-cell.mui-active{
 }
 
 .ka_exchangered {
-	width: 80px;
+	width: 32%;
 	height: 30px;
 	border: 1px #DD524D solid;
 	background-color: #DD524D;
 	border-radius: 2px;
-	margin-left: 1em;
+	margin-left: 0.2em;
 	color: #ffffff;
 	padding: 0.3em 0em;
 	font-size: 14px;
@@ -470,12 +470,12 @@ body .mui-table-view-cell.mui-active{
 }
 
 .ka_exchangegrey {
-	width: 80px;
+	width: 32%;
 	height: 30px;
 	border: 1px #ACACB4 solid;
 	background-color: #ACACB4;
 	border-radius: 2px;
-	margin-left: 1em;
+	margin-left: 0.2em;
 	color: #ffffff;
 	padding: 0.3em 0em;
 	font-size: 14px;
@@ -491,7 +491,7 @@ body .mui-table-view-cell.mui-active{
 }
 
 .ka_prologsure {
-	width: 15em;
+	width: 80%;
 }
 
 .ka_propicfonts {
