--- a/kankan/css/kankan_home.css
+++ b/kankan/css/kankan_home.css
@@ -190,7 +190,8 @@ body .mui-table-view-cell.mui-active{
 	border-radius: 2px;
 	margin-right: 3em;
 	color: #FFFFFF;
-	padding: 0.5em 2.5em;
+	/*padding: 0.5em 2.5em;*/
+	padding: 0.6em 0.7em;
 }
 
 .requestsuccess {
@@ -201,7 +202,8 @@ body .mui-table-view-cell.mui-active{
 	border-radius: 2px;
 	margin-right: 3em;
 	color: #FFFFFF;
-	padding: 0.5em 2.5em;
+	/*padding: 0.5em 2.5em;*/
+	padding: 0.6em 0.7em;
 }
 
 
