--- a/kankan/css/listitem.css
+++ b/kankan/css/listitem.css
@@ -89,11 +89,16 @@
 	width: 100%;
 }
 
+.logistics {
+	position: fixed;
+    top: 75%;
+    left: 5%;
+}
+
 .logistics img {
 	position: relative;
-	width: 50px;
-	margin-top: 90%;
-	margin-left: 10%;
+    width: 50px;
+    height: auto;
 }
 .item-img-box{
 	line-height: 160px;
