--- a/kankan/css/wu.css
+++ b/kankan/css/wu.css
@@ -244,14 +244,14 @@
 	padding-top:10px; 
 	padding-left:0px;
 	padding-right:0px; 
-	padding-bottom:0px; 
+	padding-bottom:10px; 
 	margin-top:0px;
 	height:6%;
 	width:100%;
 	font-size:0;
 	display:block;
 	vertical-align:middle;
-	position:relative;
+	position:fixed;
 	background:0 0;
 }
 .tran-foot-input {
