--- a/kankan/css/wu.css
+++ b/kankan/css/wu.css
@@ -118,7 +118,7 @@
 }
 .tran-button-sell {
 	padding-top:0px; 
-	/*padding-left:14px;*/
+	padding:4%;
 	margin-right:-1.6em;
 	width:46%;
 	font-size:17px;
@@ -157,7 +157,7 @@
 }
 .tran-button-buy {
 	padding-top:0px; 
-	padding-left:0px; 
+	padding-left:5%; 
 	margin-right:-4px;
 	width:45%;
 	font-size:17px;
