--- a/kankan/css/wu.css
+++ b/kankan/css/wu.css
@@ -115,12 +115,14 @@
 	width:100%;
 	position:relative;
 	background-color:#FFFFFF;
+	text-align: center;
 }
 .tran-button-sell {
 	padding-top:0px; 
 	/*padding-left:14px;*/
-	margin-right:-1.6em;
-	width:46%;
+	/*margin-right:-1.6em;*/
+	/*margin: 0 2%;*/
+	width:45%;
 	font-size:17px;
 	display:inline-block;
 	text-align:center;
@@ -157,9 +159,9 @@
 }
 .tran-button-buy {
 	padding-top:0px; 
-	padding-left:0px; 
-	margin-right:-4px;
-	width:45%;
+	padding-left:1em; 
+	/*margin-right:-4px;*/
+	width:50%;
 	font-size:17px;
 	display:inline-block;
 	text-align:center;
@@ -176,7 +178,7 @@
 	background-color:#FF0000; 
 	text-align:center; 
 	padding-top:5px; 
-	margin-right:10px;
+	/*margin-right:10px;*/
 }
 .tran-distribution {
 	padding-left:0px;
