--- a/kankan/css/wu.css
+++ b/kankan/css/wu.css
@@ -119,8 +119,8 @@
 }
 .tran-button-sell {
 	padding-top:0px; 
-	padding:4%;
-	margin-right:-1.6em;
+	padding-left:1%;
+	padding-right:9%;
 	width:46%;
 	font-size:17px;
 	display:inline-block;
@@ -159,7 +159,7 @@
 .tran-button-buy {
 	padding-top:0px; 
 	padding-left:5%; 
-	margin-right:-4px;
+	padding-right:1%;
 	width:45%;
 	font-size:17px;
 	display:inline-block;
