--- a/ios_kankan/iOS-SDK/iOS-SDK/HBuilder-Hello/HBuilder-Hello/Pandora/apps/H5B7054BD/www/css/kankan_home.css
+++ b/ios_kankan/iOS-SDK/iOS-SDK/HBuilder-Hello/HBuilder-Hello/Pandora/apps/H5B7054BD/www/css/kankan_home.css
@@ -22,7 +22,7 @@ body .mui-table-view-cell.mui-active{
 	font-size: 12px;
 }
 .kankan_morecoin {
-	margin-top: -10.5em;
+	margin-top: -10em;
 	position: absolute;
 	opacity: 1;
 	padding: 0 1.2em;
@@ -70,6 +70,14 @@ body .mui-table-view-cell.mui-active{
 }
 
 .ka_imgoption {
+	height: 100px;
+	line-height: 100px;
+	vertical-align: middle;
+	display: inline;
+	overflow: hidden;
+}
+.ka_imgoption img{
+	vertical-align: middle;
 	max-height: 100px;
 }
 .ka_exchangeheadimage{
@@ -165,12 +173,14 @@ body .mui-table-view-cell.mui-active{
 /***request page***/
 
 .kankan_jyimgbox {
-	margin-top: 1em;
+	margin-top: 0.5em;
+	margin-left: 0em;
+	margin-bottom: 0.8em;
 }
 
 .kankan_jhjiantou {
-	max-height: 15px;
-	max-width: 20px;
+	max-height: 20px;
+	max-width: 25px;
 }
 
 .kankan_requestimg img {
@@ -190,7 +200,8 @@ body .mui-table-view-cell.mui-active{
 	border-radius: 2px;
 	margin-right: 3em;
 	color: #FFFFFF;
-	padding: 0.5em 2.5em;
+	/*padding: 0.5em 2.5em;*/
+	padding: 0.6em 0.7em;
 }
 
 .requestsuccess {
@@ -201,7 +212,8 @@ body .mui-table-view-cell.mui-active{
 	border-radius: 2px;
 	margin-right: 3em;
 	color: #FFFFFF;
-	padding: 0.5em 2.5em;
+	/*padding: 0.5em 2.5em;*/
+	padding: 0.6em 0.7em;
 }
 
 
@@ -274,9 +286,14 @@ body .mui-table-view-cell.mui-active{
 }
 
 .ka_h5backcolor {
-	background-color: #efeff4
+	background-color: #efeff4;
+	margin-left: 1em;
+	margin-top: 1em;
+	margin-bottom: -1em;
 }
-
+.sharetext{
+	font-size: 14px;
+}
 .ka_buyway {
 	margin: 1em 0;
 	text-align: center;
@@ -285,7 +302,22 @@ body .mui-table-view-cell.mui-active{
 	width: 95px;
     height: 81px;
 }
-
+#weixinimgbox{
+	width: 80%;
+	float: right;
+}
+#weixinimgbox img{
+	width: 30px;
+	height: 25px;
+}
+#traslateing{
+	width: 50%;
+	margin: 1em 25%;
+	text-align: center;
+	height: 3em;
+	font-size: 14px;
+	color: red;	
+}
 /***productlist page***/
 
 .ka_comlevnumber {
@@ -331,6 +363,18 @@ body .mui-table-view-cell.mui-active{
 .ka_sendbutton{
 	color:#007AFF; border: 1px #FFFFFF solid;
 }
+.ka_imgoption2 {
+	height: 130px;
+	line-height: 130px;
+	vertical-align: middle;
+	display: inline;
+	overflow: hidden;
+	margin-top: 1em;
+	text-align: center;
+}
+.ka_imgoption2 img{
+	vertical-align: middle;
+}
 /***comment list*****/
 
 .ka_commentsort {
@@ -349,15 +393,14 @@ body .mui-table-view-cell.mui-active{
 	text-align: center;
 	font-size: 14px;
 }
-
 #normalcomment {
-	margin-left: 8em;
-	margin-top: -4.6em;
+	margin-left: 8.2em;
+	margin-top: -4.5em;
 }
 
 #badcomment {
-	margin-left: 16em;
-	margin-top: -4.6em;
+	margin-left: 15em;
+	margin-top: -4.4em;
 }
 
 .ka_commentinfobox {
@@ -573,11 +616,11 @@ body .mui-table-view-cell.mui-active{
 }
 
 .z_alert {
-	width: 3rem;
+	width: 4rem;
 	height: 2rem;
 	border-radius: .2rem;
 	background: #fff;
-	font-size: .24rem;
+	font-size: .22rem;
 	text-align: center;
 	position: absolute;
 	left: 50%;
@@ -787,6 +830,7 @@ body .mui-table-view-cell.mui-active{
 	height: 30px;
 	font-size: 14px;
 	padding-top: 7px;
+	text-align: center;
 }
 
 .mui-icon-extra-gold {
