--- a/kankan/css/wu.css
+++ b/kankan/css/wu.css
@@ -653,9 +653,9 @@
 .user-point-grid {
 	padding-top:2%; 
 	padding-bottom:2%; 
-	margin-left:-8px;
-	margin-right:-14px;
-	width:38%;
+	/*margin-left:-8px;
+	margin-right:-14px;*/
+	width:45%;
 	font-size:17px;
 	display:inline-block;
 	position:relative;
