--- a/ios_kankan/iOS-SDK/iOS-SDK/HBuilder-Hello/HBuilder-Hello/Pandora/apps/H5B7054BD/www/css/wu.css
+++ b/ios_kankan/iOS-SDK/iOS-SDK/HBuilder-Hello/HBuilder-Hello/Pandora/apps/H5B7054BD/www/css/wu.css
@@ -352,7 +352,7 @@
 }
 .delivery-list {
 	padding-left:0px;
-	margin-bottom:0px; 
+	margin-bottom:10px; 
 	padding-right:0px; 
 	padding-bottom:0px; 
 	height:auto;
@@ -653,9 +653,9 @@
 .user-point-grid {
 	padding-top:2%; 
 	padding-bottom:2%; 
-	margin-left:-8px;
-	margin-right:-14px;
-	width:38%;
+	/*margin-left:-8px;
+	margin-right:-14px;*/
+	width:45%;
 	font-size:17px;
 	display:inline-block;
 	position:relative;
