--- a/kankan/css/kankan_home.css
+++ b/kankan/css/kankan_home.css
@@ -350,6 +350,7 @@ body .mui-table-view-cell.mui-active{
 .ka_userboxtext{
 	word-wrap:break-word;
 	width:4em;
+	font-size: 14px;
 }
 .commentlists{
 	margin-right: 4em;
