--- a/kankan/css/listitem.css
+++ b/kankan/css/listitem.css
@@ -21,7 +21,7 @@
 	/*width: 100%;
 	height: 100%;*/
 }
-
+/**
 .item-tap p {
 	position: absolute;
 	top:150px;
@@ -37,7 +37,7 @@
 	text-overflow: ellipsis;
 	overflow: hidden;
 }
-
+**/
 .item-buttom {
 	height: 20%;
 	background-color: white;
