一览页面无网络刷新添加，商品发布页面bug改修，详情页文言对应

--- a/kankan/css/kankan_home.css
+++ b/kankan/css/kankan_home.css
@@ -907,3 +907,17 @@ body .mui-table-view-cell.mui-active{
     -webkit-transform: scale(1.0);
   }
 }
+#reloadpage{
+	width: 100%;
+	text-align: center;
+	font-size: 1em;
+	margin-top: 50%;
+	color: #ACACB4;
+}
+#reloadpage2{
+	width: 100%;
+	text-align: center;
+	font-size: 1em;
+	margin-top: 50%;
+	color: #ACACB4;
+}
