详情页改修，商品发布bug改修

--- a/kankan/css/kankan_home.css
+++ b/kankan/css/kankan_home.css
@@ -921,3 +921,7 @@ body .mui-table-view-cell.mui-active{
 	margin-top: 50%;
 	color: #ACACB4;
 }
+.daojishitext{
+	font-size: 14px;color:#555555;
+	text-align: right;
+}
