--- a/kankan/css/wu.css
+++ b/kankan/css/wu.css
@@ -608,6 +608,7 @@
 	position:relative;
 	background:0 0;
 	background-color:#FFFFFF;
+	text-align: center;
 }
 .user-comment-grid {
 	padding-top:0px; 
