ios打包工程更新

--- a/ios_kankan/iOS-SDK/iOS-SDK/HBuilder-Hello/HBuilder-Hello/Pandora/apps/H5B7054BD/www/css/kankan_home.css
+++ b/ios_kankan/iOS-SDK/iOS-SDK/HBuilder-Hello/HBuilder-Hello/Pandora/apps/H5B7054BD/www/css/kankan_home.css
@@ -350,6 +350,7 @@ body .mui-table-view-cell.mui-active{
 .ka_userboxtext{
 	word-wrap:break-word;
 	width:4em;
+	font-size: 14px;
 }
 .commentlists{
 	margin-right: 4em;
@@ -905,4 +906,22 @@ body .mui-table-view-cell.mui-active{
     transform: scale(1.0);
     -webkit-transform: scale(1.0);
   }
+}
+#reloadpage{
+	width: 100%;
+	text-align: center;
+	font-size: 1em;
+	margin-top: 50%;
+	color: #ACACB4;
+}
+#reloadpage2{
+	width: 100%;
+	text-align: center;
+	font-size: 1em;
+	margin-top: 50%;
+	color: #ACACB4;
+}
+.daojishitext{
+	font-size: 14px;color:#555555;
+	text-align: right;
 }
