--- a/ios_kankan/iOS-SDK/iOS-SDK/HBuilder-Hello/HBuilder-Hello/Pandora/apps/H5B7054BD/www/css/wu.css
+++ b/ios_kankan/iOS-SDK/iOS-SDK/HBuilder-Hello/HBuilder-Hello/Pandora/apps/H5B7054BD/www/css/wu.css
@@ -159,7 +159,8 @@
 }
 .tran-button-buy {
 	padding-top:0px; 
-	padding-left:1em; 
+	padding-left:0.6em;
+	padding-right:0.6em;  
 	/*margin-right:-4px;*/
 	width:50%;
 	font-size:17px;
@@ -608,6 +609,7 @@
 	position:relative;
 	background:0 0;
 	background-color:#FFFFFF;
+	text-align: center;
 }
 .user-comment-grid {
 	padding-top:0px; 
