修改在iPad上首页商品名被遮挡了。

--- a/kankan/css/listitem.css
+++ b/kankan/css/listitem.css
@@ -50,7 +50,8 @@
 .comm-name {
 	font-size: 14px;
 	height: 55%;
-	padding: 5%;
+	padding-left: 5%;
+	padding-bottom: 5%;
 	text-overflow: ellipsis;
 	overflow: hidden;
 }
