详情页关注商品和推荐商品循环滑动去掉，首页一览，用户页面，请求页面图片动态获取高度

--- a/kankan/css/listitem.css
+++ b/kankan/css/listitem.css
@@ -3,9 +3,9 @@
 	padding: 2px;
 }
 
-.comm-item {
+/*.comm-item {
 	height: 200px;
-}
+}*/
 
 .item-tap {
 	height: 80%;
@@ -101,9 +101,9 @@
     height: auto;
     z-index:999;
 }
-.item-img-box{
+/*.item-img-box{
 	line-height: 160px;
-}
+}*/
 .item-img-box img{
 	height:auto;width:100%;vertical-align:middle;
 }
