--- a/android_kankan/app/src/main/assets/apps/H5B7054BD/www/css/listitem.css
+++ b/android_kankan/app/src/main/assets/apps/H5B7054BD/www/css/listitem.css
@@ -4,7 +4,7 @@
 }
 
 .comm-item {
-	height: 200px;
+	/*height: 200px;*/
 }
 
 .item-tap {
@@ -50,7 +50,8 @@
 .comm-name {
 	font-size: 14px;
 	height: 55%;
-	padding: 5%;
+	padding-left: 5%;
+	padding-bottom: 5%;
 	text-overflow: ellipsis;
 	overflow: hidden;
 }
@@ -101,9 +102,9 @@
     height: auto;
     z-index:999;
 }
-.item-img-box{
+/*.item-img-box{
 	line-height: 160px;
-}
+}*/
 .item-img-box img{
 	height:auto;width:100%;vertical-align:middle;
 }
