--- a/kankan/css/kankan_home.css
+++ b/kankan/css/kankan_home.css
@@ -929,3 +929,6 @@ body .mui-table-view-cell.mui-active{
 	font-size: 14px;color:#555555;
 	text-align: right;
 }
+#reloadpage{
+	font-size: 14px;
+}
