商品发布和编辑页面选择器更换实装

--- a/kankan/css/kankan_home.css
+++ b/kankan/css/kankan_home.css
@@ -459,7 +459,9 @@ body .mui-table-view-cell.mui-active{
 
 
 /*********product login*********/
-
+.tickimgbox li{
+	width: 100%;
+}
 .ka_pictures {
 	height: 50px;
 	width: 50px;
