确认账户页面装成以及在用户编辑页面增加价格完成

--- a/kankan/css/kankan_home.css
+++ b/kankan/css/kankan_home.css
@@ -1020,5 +1020,5 @@ body .mui-table-view-cell.mui-active{
 	height: 2.5em;
 }
 .accountDesc {
-	margin: 1em 0 1em 1em;
+	margin: 1em 1em 1em 1em;
 }
